samples/argo-rollout/blue-green/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-user
  namespace: service
spec:
  selector:
    matchLabels:
      type: service
      for: user
  template:
    metadata:
      labels:
        type: service
        for: user
    spec:
      containers:
        - name: user
          image: { imageURL }
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 400m
              memory: 1024Mi
            limits:
              cpu: 400m
              memory: 1024Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-products
  namespace: service
spec:
  selector:
    matchLabels:
      type: service
      for: products
  template:
    metadata:
      labels:
        type: service
        for: products
    spec:
      containers:
        - name: products
          image: { imageURL }
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 400m
              memory: 1024Mi
            limits:
              cpu: 400m
              memory: 1024Mi

# backoffice
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-product-backoffice
  namespace: service
spec:
  replicas: 1
  selector:
    matchLabels:
      type: service
      for: service-product-backoffice
  template:
    metadata:
      labels:
        type: service
        for: service-product-backoffice
    spec:
      containers:
        - name: service-product-backoffice
          image: { imageURL }
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 200m
              memory: 512Mi
