samples/argo-rollout/blue-green/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: rollout-bluegreen-active
  namespace: argo-sample-app
spec:
  type: ClusterIP
  selector:
    app: rollout-bluegreen
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080

---
kind: Service
apiVersion: v1
metadata:
  name: rollout-bluegreen-preview
  namespace: argo-sample-app
spec:
  type: ClusterIP
  selector:
    app: rollout-bluegreen
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
