samples/argo-rollout/blue-green/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-ingress
  namespace: service
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: { acmArn }
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /health
spec:
  ingressClassName: alb
  rules:
    - host: 192.168.0.109
      http:
        paths:
          - path: /user
            pathType: Prefix
            backend:
              service:
                # name: service-user
                name: service-user-active
                port:
                  number: 8080
          - path: /products
            pathType: Prefix
            backend:
              service:
                # name: service-products
                name: service-products-active
                port:
                  number: 8080
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: service-product-backoffice
                port:
                  number: 8080
